syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package auth_v1;

option go_package = "github.com/gogapopp/microservices/auth/api/auth_v1;auth_v1";

service AuthV1 {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

enum Role {
    user = 0;
    admin = 1;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
    int64 id = 1;
    string name = 2;
    string email = 3;
}

message UpdateResponse {
    google.protobuf.Empty empty = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    google.protobuf.Empty empty = 1;
}